<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_fragment_temperature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7a000000"
    tools:context=".ui.inputdialogs.TemperatureDialog"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        app:cardCornerRadius="10dp"
        android:background="@drawable/dialog_popup_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_temperature"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/MyCustomTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_scale"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <RadioGroup
                android:id="@+id/radioGroup"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit_f"
                    android:textSize="12sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_c"
                    android:textSize="12sp" />


            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                style="@style/MyCustomTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/et_temp_value_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView
                android:id="@+id/textView4"
                style="@style/MyCustomTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_and_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_temp_value_input" />

            <TextView
                android:id="@+id/tv_date_value_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="22/11/2020"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tv_time_value_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="21 : 30"
                android:textSize="24sp"
                android:timePickerMode="spinner"
                app:layout_constraintStart_toEndOf="@+id/tv_date_value_input"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />



            <TextView
                android:id="@+id/textView5"
                style="@style/MyCustomTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_value_input" />

            <EditText
                android:id="@+id/et_note_value_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/btn_cancel_temp_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/btn_save_temp_input"
                app:layout_constraintTop_toBottomOf="@+id/et_note_value_input" />

            <Button
                android:id="@+id/btn_save_temp_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_note_value_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>